--- a/detalleEstablecimiento.html
+++ b/detalleEstablecimiento.html
@@ -1,82 +1,61 @@
 <! DOCTYPE html>
-<html lang="en">
+  <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE = edge" />
     <meta name="viewport" content="width = device-width, initial-scale = 1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Establecientos Detallados</title>
   </head>
+
   <body>
     <header class="header-fondo">
       <div class="contenedor">
         <div class="header">
           <div><a href="index.html" class="logo">LOGO</a></div>
           <div class="redes">
-            <div class="svg">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="icon icon-tabler icon-tabler-brand-instagram"
-                width="44"
-                height="44"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="#ffffff"
-                fill="none"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <rect x="4" y="4" width="16" height="16" rx="4" />
-                <circle cx="12" cy="12" r="3" />
-                <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
-              </svg>
-            </div>
-            <div class="svg">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="icon icon-tabler icon-tabler-brand-facebook"
-                width="44"
-                height="44"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="#ffffff"
-                fill="none"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path
-                  d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"
-                />
-              </svg>
-            </div>
-            <div class="svg">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="icon icon-tabler icon-tabler-brand-twitter"
-                width="44"
-                height="44"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="#ffffff"
-                fill="none"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path
-                  d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z"
-                />
-              </svg>
-            </div>
+
+            <a href="https://www.instagram.com/liceoculturalbritanico/">
+              <div class="svg">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="44"
+                  height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+                  stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <rect x="4" y="4" width="16" height="16" rx="4" />
+                  <circle cx="12" cy="12" r="3" />
+                  <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
+                </svg>
+              </div>
+            </a>
+
+            <a href="https://www.facebook.com/liceoculturalbritanico?ref=hl">
+              <div class="svg">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="44"
+                  height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+                  stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+                </svg>
+              </div>
+            </a>
+
+            <a href="https://twitter.com/ingleslcb?lang=es">
+              <div class="svg">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter" width="44"
+                  height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+                  stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path
+                    d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z" />
+                </svg>
+              </div>
+            </a>
+
           </div>
         </div>
       </div>
@@ -86,9 +65,7 @@
         <li><a href="index.html" class="navegacion__a">Home</a></li>
         <li><a href="nosotros.html" class="navegacion__a">Nosotros</a></li>
         <li>
-          <a href="establecimiento.html" class="navegacion__a"
-            >Establecimientos</a
-          >
+          <a href="establecimiento.html" class="navegacion__a">Establecimientos</a>
         </li>
         <li>
           <a href="inscripcion.html" class="navegacion__a">Inscripcion</a>
@@ -122,11 +99,7 @@
           <!--1-->
           <div class="esta1">
             <div>
-              <img
-                src="img/establecimientoFake.jpg"
-                alt="faker"
-                class="fotoCal"
-              />
+              <img src="img/establecimientoFake.jpg" alt="faker" class="fotoCal" />
             </div>
             <div class="datoCal">
               <h4>IDIOMA - NIVEL</h4>
@@ -136,18 +109,12 @@
               <p>Sede:Establecimiento</p>
               <p>Precio: $0000.-</p>
 
-              <a href="inscripcion.html"
-                ><input type="submit" value="Inscribirse"
-              /></a>
+              <a href="inscripcion.html"><input type="submit" value="Inscribirse" /></a>
             </div>
           </div>
           <div class="esta1">
             <div>
-              <img
-                src="img/establecimientoFake.jpg"
-                alt="faker"
-                class="fotoCal"
-              />
+              <img src="img/establecimientoFake.jpg" alt="faker" class="fotoCal" />
             </div>
             <div class="datoCal">
               <h4>IDIOMA - NIVEL</h4>
@@ -156,9 +123,7 @@
               <p>Fecha de Inicio:</p>
               <p>Sede:Establecimiento</p>
               <h6>Precio:$0000.-</h6>
-              <a href="inscripcion.html"
-                ><input type="submit" value="Inscribirse"
-              /></a>
+              <a href="inscripcion.html"><input type="submit" value="Inscribirse" /></a>
             </div>
           </div>
         </article>
@@ -166,11 +131,7 @@
           <!--2-->
           <div class="esta1">
             <div>
-              <img
-                src="img/establecimientoFake.jpg"
-                alt="faker"
-                class="fotoCal"
-              />
+              <img src="img/establecimientoFake.jpg" alt="faker" class="fotoCal" />
             </div>
             <div class="datoCal">
               <h4>IDIOMA - NIVEL</h4>
@@ -179,18 +140,12 @@
               <p>Fecha de Inicio:</p>
               <p>Sede:Establecimiento</p>
               <h6>Precio:$0000.-</h6>
-              <a href="inscripcion.html"
-                ><input type="submit" value="Inscribirse"
-              /></a>
+              <a href="inscripcion.html"><input type="submit" value="Inscribirse" /></a>
             </div>
           </div>
           <div class="esta1">
             <div>
-              <img
-                src="img/establecimientoFake.jpg"
-                alt="faker"
-                class="fotoCal"
-              />
+              <img src="img/establecimientoFake.jpg" alt="faker" class="fotoCal" />
             </div>
             <div class="datoCal">
               <h4>IDIOMA - NIVEL</h4>
@@ -199,14 +154,13 @@
               <p>Fecha de Inicio:</p>
               <p>Sede:Establecimiento</p>
               <h6>Precio:$0000.-</h6>
-              <a href="inscripcion.html"
-                ><input type="submit" value="Inscribirse"
-              /></a>
+              <a href="inscripcion.html"><input type="submit" value="Inscribirse" /></a>
             </div>
           </div>
         </article>
       </section>
     </main>
+    <!--Links a redes sociales-->
     <footer class="header-fondo">
       <div class="contenedor">
         <div class="footer">
@@ -218,7 +172,6 @@
           </div>
           <div>
             <ul>
-              <li><strong>Menu Inferior:</strong></li>
               <li><a href="establecimiento.html">Establecimientos</a></li>
               <li><a href="inscripcion.html">Inscripción</a></li>
               <li><a href="calendarioCursos.html">Calendario</a></li>
@@ -226,70 +179,43 @@
             </ul>
           </div>
           <div class="redes">
-            <div class="svg">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="icon icon-tabler icon-tabler-brand-instagram"
-                width="44"
-                height="44"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="#ffffff"
-                fill="none"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
+
+            <a href="https://www.instagram.com/liceoculturalbritanico/">
+              <div class="svg">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="44"
+                  height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+                  stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <rect x="4" y="4" width="16" height="16" rx="4" />
+                  <circle cx="12" cy="12" r="3" />
+                  <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
+                </svg>
+            </a>
+          </div>
+
+
+          <div class="svg">
+            <a href="https://www.facebook.com/liceoculturalbritanico?ref=hl"><svg xmlns="http://www.w3.org/2000/svg"
+                class="icon icon-tabler icon-tabler-brand-facebook" width="44" height="44" viewBox="0 0 24 24"
+                stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <rect x="4" y="4" width="16" height="16" rx="4" />
-                <circle cx="12" cy="12" r="3" />
-                <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
-              </svg>
-            </div>
-            <div class="svg">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="icon icon-tabler icon-tabler-brand-facebook"
-                width="44"
-                height="44"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="#ffffff"
-                fill="none"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
+                <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+              </svg></a>
+          </div>
+          <div class="svg">
+            <a href="https://twitter.com/ingleslcb?lang=es"><svg xmlns="http://www.w3.org/2000/svg"
+                class="icon icon-tabler icon-tabler-brand-twitter" width="44" height="44" viewBox="0 0 24 24"
+                stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                 <path
-                  d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"
-                />
-              </svg>
-            </div>
-            <div class="svg">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="icon icon-tabler icon-tabler-brand-twitter"
-                width="44"
-                height="44"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="#ffffff"
-                fill="none"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path
-                  d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z"
-                />
-              </svg>
-            </div>
+                  d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z" />
+              </svg></a>
           </div>
         </div>
       </div>
+      </div>
     </footer>
-    <script
-      src="https://kit.fontawesome.com/739ac544ee.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/739ac544ee.js" crossorigin="anonymous"></script>
   </body>
-</html>
+
+  </html>
