--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1">
   <meta charset="UTF-8"> <!-- cambiar codificacion de la pagina, para que por ejemplo pueda poneer acentos-->
-  <link rel="stylesheet" href="fonts/style.css">
+  <meta name="keywords" content="INSTITUTO, INSTITUTO INGLES,INSTITUTO IDIOMAS,IDIOMAS,CURSOS">
+  <!--Cuando buscamos en el buscador la palabra te aparezca-->
+  <meta name="Copyrigth" content="Instagram Inc.">
+  <meta name="Copyrigth" content="Facebook Inc.">
+  <meta name="Copyrigth" content="whatsapp Inc.">
+  <meta name="description" content="Esta pagina web es de un instituto de cultura Britanica llamado
+    El diseo, la cual brinda informacion de los cursos y permite registrar nuevos alumnos o consultar informacion de los actuales.
+    Ademas permite poder contactarnos facilmente.">
+  <meta name="author" content="LAUTARO JUAREZ, SANTIAGO,LUCAS,ARIEL">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/formulario.css">
   <link rel="stylesheet" href="css/style.css">
-
-
-
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Material+Icons+Outlined">
 
 
@@ -26,33 +30,43 @@
         <div class="header">
           <div><a href="index.html" class="logo">LOGO</a></div>
           <div class="redes">
-            <div class="svg">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="44"
-                height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
-                stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <rect x="4" y="4" width="16" height="16" rx="4" />
-                <circle cx="12" cy="12" r="3" />
-                <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
-              </svg>
-            </div>
-            <div class="svg">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="44"
-                height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
-                stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
-              </svg>
-            </div>
-            <div class="svg">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter" width="44"
-                height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
-                stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path
-                  d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z" />
-              </svg>
-            </div>
+
+            <a href="https://www.instagram.com/liceoculturalbritanico/">
+              <div class="svg">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="44"
+                  height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+                  stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <rect x="4" y="4" width="16" height="16" rx="4" />
+                  <circle cx="12" cy="12" r="3" />
+                  <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
+                </svg>
+              </div>
+            </a>
+
+            <a href="https://www.facebook.com/liceoculturalbritanico?ref=hl">
+              <div class="svg">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="44"
+                  height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+                  stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+                </svg>
+              </div>
+            </a>
+
+            <a href="https://twitter.com/ingleslcb?lang=es">
+              <div class="svg">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter" width="44"
+                  height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+                  stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path
+                    d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z" />
+                </svg>
+              </div>
+            </a>
+
           </div>
         </div>
       </div>
@@ -75,7 +89,8 @@
     </nav>
 
     <main class="contenedor">
-      <section>
+
+      <section class="main">
         <article>
           <section class="carrusel">
             <span class="material-icons-outlined">
@@ -89,19 +104,31 @@
       </section>
 
       <h1 class="establecimientos">LICEO CULTURAL BRITANICO</h1>
-      <section class="pagina">
-          <div>
-            <img src="img/inscribite.jpg">
-            <h3>Selecciona el curso</h3>
-          </div>
-          <div>
-            <img src="img/comunicate.jpg">
-            <h3>Inscribite</h3>
-          </div>
-          <div>
-            <img src="img/descarga.jpg">
-            <h3>Busca tu establecimiento</h3>
-          </div>
+      <section class="iconos">
+        <article class="pagina">
+          <a href="calendarioCursos.html">
+            <div class="box">
+              <img src="img/inscribite.jpg">
+              <h3>Selecciona el curso</h3>
+
+            </div>
+          </a>
+
+          <a href="inscripcion.html">
+            <div class="box">
+              <img src="img/comunicate.jpg">
+              <h3>Inscribite</h3>
+            </div>
+          </a>
+
+
+          <a href="detalleEstablecimiento.html">
+            <div class="box">
+              <img src="img/descarga.jpg">
+              <h3>Busca tu establecimiento</h3>
+            </div>
+          </a>
+        </article>
       </section>
 
 
@@ -155,19 +182,20 @@
       </section>
 
 
-      <aside>
+      <aside class="algo">
         <form action="#" target="" method="get" name="formDatosPersonales">
           <h1>Inscripción</h1>
-          <div class="contenedor">
-            <label for="nombre">Nombre</label>
-            <input type="text" name="nombre" id="nombre" placeholder="Escribe tu nombre" />
+          <label for="nombre">Nombre</label>
+          <input type="text" name="nombre" id="nombre" placeholder="Escribe tu nombre" />
 
-            <label for="apellidos">Apellidos</label>
-            <input type="text" name="apellidos" id="apellidos" placeholder="1r Apellido" />
+          <label for="apellidos">Apellido</label>
+          <input type="text" name="apellidos" id="apellidos" placeholder="1r Apellido" />
 
-            <label for="email" />Email</label>
-            <input type="email" name="email" id="email" placeholder="email" required />
-          </div>
+          <label for="email" />Email</label>
+          <input type="email" name="email" id="email" placeholder="email" required />
+
+
+
           <input type="submit" name="enviar" value="enviar datos" class="boton-inscripcion" />
         </form>
 
@@ -194,35 +222,40 @@
             </ul>
           </div>
           <div class="redes">
-            <div class="svg">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="44"
-                height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
-                stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <rect x="4" y="4" width="16" height="16" rx="4" />
-                <circle cx="12" cy="12" r="3" />
-                <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
-              </svg>
-            </div>
-            <div class="svg">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="44"
-                height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
-                stroke-linejoin="round">
+
+            <a href="https://www.instagram.com/liceoculturalbritanico/">
+              <div class="svg">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="44"
+                  height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+                  stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <rect x="4" y="4" width="16" height="16" rx="4" />
+                  <circle cx="12" cy="12" r="3" />
+                  <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
+                </svg>
+            </a>
+          </div>
+
+
+          <div class="svg">
+            <a href="https://www.facebook.com/liceoculturalbritanico?ref=hl"><svg xmlns="http://www.w3.org/2000/svg"
+                class="icon icon-tabler icon-tabler-brand-facebook" width="44" height="44" viewBox="0 0 24 24"
+                stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                 <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
-              </svg>
-            </div>
-            <div class="svg">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter" width="44"
-                height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
-                stroke-linejoin="round">
+              </svg></a>
+          </div>
+          <div class="svg">
+            <a href="https://twitter.com/ingleslcb?lang=es"><svg xmlns="http://www.w3.org/2000/svg"
+                class="icon icon-tabler icon-tabler-brand-twitter" width="44" height="44" viewBox="0 0 24 24"
+                stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                 <path
                   d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z" />
-              </svg>
-            </div>
+              </svg></a>
           </div>
         </div>
+      </div>
       </div>
     </footer>
 
